--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -7,7 +7,7 @@ BBFILES ?= ""
 BBLAYERS = " \
   ${BSPDIR}/sources/poky/meta \
   ${BSPDIR}/sources/poky/meta-yocto \
-  ${BSPDIR}/sources/meta-ivi \
+  ${BSPDIR}/sources/meta-ivi/meta-ivi \
   ${BSPDIR}/sources/meta-fsl-arm \
   ${BSPDIR}/sources/meta-fsl-ivi \
 "
