--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -8,6 +8,8 @@ BBLAYERS = " \
   ${BSPDIR}/sources/poky/meta \
   ${BSPDIR}/sources/poky/meta-yocto \
   ${BSPDIR}/sources/meta-ivi/meta-ivi \
+  ${BSPDIR}/sources/meta-ivi/meta-ivi-demo \
+  ${BSPDIR}/sources/meta-openembedded/meta-oe \
   ${BSPDIR}/sources/meta-fsl-arm \
   ${BSPDIR}/sources/meta-fsl-ivi \
 "
