bblayers: add settings for new layer dependency
* Add settings for new layer dependency for ivi-image-demo
  target

Signed-off-by: Adrian Alonso <aalonso@freescale.com>

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -9,7 +9,9 @@ BBLAYERS = " \
   ${BSPDIR}/sources/poky/meta-yocto \
   ${BSPDIR}/sources/poky/meta-yocto-bsp \
   ${BSPDIR}/sources/meta-ivi/meta-ivi \
+  ${BSPDIR}/sources/meta-ivi/meta-ivi-demo \
   ${BSPDIR}/sources/meta-openembedded/meta-oe \
+  ${BSPDIR}/sources/meta-qt5 \
   ${BSPDIR}/sources/meta-fsl-arm \
   ${BSPDIR}/sources/meta-fsl-ivi \
 "
