--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -10,6 +10,7 @@ BBLAYERS = " \
   ${BSPDIR}/sources/meta-ivi/meta-ivi \
   ${BSPDIR}/sources/meta-fsl-arm \
   ${BSPDIR}/sources/meta-fsl-ivi \
+  ${BSPDIR}/sources/meta-fsl-demos \
 "
 
 BBLAYERS_NON_REMOVABLE ?= " \
